Desktop is completed

--- a/src/index.html
+++ b/src/index.html
@@ -37,13 +37,90 @@
         <div class="main-container">
             <main class="main">
                 <div class="main__left-block">
-                    <h1 class="main__left-header">Зарабатывайте больше<b class="colorText">с WELBEX</b></h1>
+                    <h1 class="main__left-header">Зарабатывайте больше <br><b class="colorText">с WELBEX</b></h1>
                     <p class="main__left-paragraph">Развиваем и контролируем продажи за вас</p>   
                 </div>
                 <div class="main__right-block">
-                    <h4 class="main__right-header">Вместе с<b class="colorText"> БЕСПЛАТНОЙ КОНСУЛЬТАЦИЕЙ</b>мы дарим:</h4>
+                    <h4 class="main__right-header">Вместе с<b class="colorText"> БЕСПЛАТНОЙ КОНСУЛЬТАЦИЕЙ</b> мы дарим:</h4>
+                    <div class="quatroBlock">
+                        <div class="quatroBlock__item">
+                            <h6 class="quatroBlock__header">ВИДЖЕТЫ</h6>
+                            <span class="quatroBlock__span">30 готовых решений</span>
+                        </div>
+                        <div class="quatroBlock__item">
+                            <h6 class="quatroBlock__header">DASHBOARD</h6>
+                            <span class="quatroBlock__span">с показателями вашего бизнеса</span>
+                        </div>
+                        <div class="quatroBlock__item">
+                            <h6 class="quatroBlock__header">SKYPE АУДИТ</h6>
+                            <span class="quatroBlock__span">отдела продаж и CRM системы</span>
+                        </div>
+                        <div class="quatroBlock__item">
+                            <h6 class="quatroBlock__header">35 ДНЕЙ</h6>
+                            <span class="quatroBlock__span">использования CRM</span>
+                        </div>
+                    </div>
+                    <div class="quatroBlock-mobile">
+                        <div class="quatroBlock-mobile__item">
+                            <img src="../assets/colorDash.svg" alt="dash" class="quatroBlock-mobile__img">
+                            <span class="quatroBlock-mobile__span">SKYPE АУДИТ</span>
+                        </div>
+                        <div class="quatroBlock-mobile__item">
+                            <img src="../assets/colorDash.svg" alt="dash" class="quatroBlock-mobile__img">
+                            <span class="quatroBlock-mobile__span">30 ВИДЖЕТОВ</span>
+                        </div>
+                        <div class="quatroBlock-mobile__item">
+                            <img src="../assets/colorDash.svg" alt="dash" class="quatroBlock-mobile__img">
+                            <span class="quatroBlock-mobile__span">DASHBOARD</span>
+                        </div>
+                        <div class="quatroBlock-mobile__item">
+                            <img src="../assets/colorDash.svg" alt="dash" class="quatroBlock-mobile__img">
+                            <span class="quatroBlock-mobile__span">МЕСЯЦ AMOCRM</span>
+                        </div>
+                    </div>
                 </div>
+                <button class="main__button">Получить консультацию</button>
             </main>
+        </div>
+        <div class="footer-container">
+            <footer class="footer">
+                <div class="footer__block1">
+                    <h5 class="footer__header">КОМПАНИИ</h5>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">Партнёрская программа</li>
+                        <li class="footer__list-item">Вакансии</li>
+                    </ul>
+                </div>
+                <div class="footer__block2">
+                    <h5 class="footer__header">МЕНЮ</h5>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">Расчёт стоимости</li>
+                        <li class="footer__list-item">Кейсы</li>
+                        <li class="footer__list-item">Услуги</li>
+                        <li class="footer__list-item">Благодарственные письма</li>
+                        <li class="footer__list-item">Виджеты</li>
+                        <li class="footer__list-item">Сертификаты</li>
+                        <li class="footer__list-item">Интеграции</li>
+                        <li class="footer__list-item">Блог на Youtube</li>
+                        <li class="footer__list-item">Наши клиенты</li>
+                        <li class="footer__list-item">Вопрос / Ответ</li>
+                    </ul>
+                </div>
+                <div class="footer__block3">
+                    <h5 class="footer__header">КОНТАКТЫ</h5>
+                    <div class="phoneNumber">+7 555 555-55-55</div>
+                    <div class="social-network">
+                        <a href="#" class="social-network__telegram"><img src="../assets/telegram.svg" alt="telegram" ></a>
+                        <a href="#" class="social-network__viber"><img src="../assets/viber.svg" alt="viber" ></a>
+                        <a href="#" class="social-network__watsapp"><img src="../assets/whatsapp.svg" alt="watsapp" ></a>
+                    </div>
+                    <div class="adress">Москва, Путевой проезд 3с1, к 902</div>
+                </div>
+                <div class="footer__block4">
+                    <span class="footer__comment">©WELBEX 2022. Все права защищены.</span><br>
+                    <span class="footer__comment footer__comment_underline">Политика конфиденциальности</span>
+                </div>
+            </footer>
         </div>
     </div>
 </body>
